--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,11 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html/
+    destination: /var/www/html/current
+hooks:
+  BeforeInstall:
+    - location: scripts/stop_server.sh
+  AfterInstall:
+    - location: scripts/deploy_new_version.sh
+  ApplicationStart:
+    - location: scripts/start_server.sh
