--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /var/www/html/releases/latest
+  - source: /src
+    destination: /var/www/html/releases/new
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
@@ -10,13 +10,5 @@ hooks:
       runas: ubuntu
   AfterInstall:
     - location: scripts/after_install.sh
-      timeout: 300
-      runas: ubuntu
-  ApplicationStart:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: ubuntu
-  ValidateService:
-    - location: scripts/validate.sh
       timeout: 300
       runas: ubuntu
