--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,5 @@
 version: 0.0
 os: linux
 files:
-  - source: /src/
-    destination: /var/www/html/releases/new
+  - source: /
+    destination: /var/www/html
