Add installation hooks to appspec.yml
Added hooks for before and after installation scripts.

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,4 +3,13 @@ os: linux
 files:
   - source: /
     destination: /var/www/html/releases
-    runas: ubuntu:www-data
+hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ubuntu
+
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: ubuntu
